// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Question Option selected 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingVertical": 24,
    }
  }
  testID="question"
>
  <View
    style={
      Object {
        "paddingHorizontal": 64,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              }
            }
          >
            What is the online Apple application store called?
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View
      testID="explanation"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#90A4AE",
                "fontSize": 15,
                "textAlign": "center",
              }
            }
          >
            Select the correct answers
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      testID="question-choices"
    >
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-1"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Play Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderColor": "#00B0FF",
                },
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-2-selected"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      App Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-3"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Apple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-4"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Pineapple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-validate"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                false,
              ],
            ]
          }
        >
          Validate
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Question QCM 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingVertical": 24,
    }
  }
  testID="question"
>
  <View
    style={
      Object {
        "paddingHorizontal": 64,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              }
            }
          >
            What is the online Apple application store called?
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View
      testID="explanation"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#90A4AE",
                "fontSize": 15,
                "textAlign": "center",
              }
            }
          >
            Select the correct answers
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      testID="question-choices"
    >
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-1"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Play Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-2"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      App Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-3"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Apple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-4"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Pineapple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-validate-disabled"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 44,
              "justifyContent": "center",
              "marginBottom": 10,
            },
            Array [
              Object {
                "borderRadius": 32,
                "borderWidth": 0,
                "height": 54,
                "marginBottom": 0,
              },
              Object {
                "backgroundColor": "#00B0FF",
              },
              undefined,
            ],
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#90A4AE",
                },
              ],
            ]
          }
        >
          Validate
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Question QCM Graphic 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingVertical": 24,
    }
  }
  testID="question"
>
  <View
    style={
      Object {
        "paddingHorizontal": 64,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              }
            }
          >
            What is the online Apple application store called?
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View
      testID="explanation"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#90A4AE",
                "fontSize": 15,
                "textAlign": "center",
              }
            }
          >
            Select the correct answers
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      testID="question-choices"
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "overflow": "hidden",
                  },
                  false,
                  Object {
                    "flexGrow": 1,
                  },
                ]
              }
              testID="question-choice-1"
            >
              <View
                style={
                  Object {
                    "borderTopLeftRadius": 3,
                    "borderTopRightRadius": 3,
                    "height": 120,
                    "width": "100%",
                  }
                }
              >
                <Image
                  resizeMode="cover"
                  source={
                    Object {
                      "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": 120,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                  testID="question-choice-1-img"
                />
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-start",
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View>
                  <View
                    style={Object {}}
                  >
                    <Text
                      selectable={false}
                      style={
                        Array [
                          Object {},
                          Object {},
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#14171A",
                            "fontSize": 17,
                            "fontWeight": "700",
                          }
                        }
                      >
                        Play Store
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "height": 8,
                "width": 8,
              }
            }
          />
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "overflow": "hidden",
                  },
                  false,
                  Object {
                    "flexGrow": 1,
                  },
                ]
              }
              testID="question-choice-2"
            >
              <View
                style={
                  Object {
                    "borderTopLeftRadius": 3,
                    "borderTopRightRadius": 3,
                    "height": 120,
                    "width": "100%",
                  }
                }
              >
                <Image
                  resizeMode="cover"
                  source={
                    Object {
                      "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": 120,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                  testID="question-choice-2-img"
                />
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-start",
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View>
                  <View
                    style={Object {}}
                  >
                    <Text
                      selectable={false}
                      style={
                        Array [
                          Object {},
                          Object {},
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#14171A",
                            "fontSize": 17,
                            "fontWeight": "700",
                          }
                        }
                      >
                        App Store
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "overflow": "hidden",
                  },
                  false,
                  Object {
                    "flexGrow": 1,
                  },
                ]
              }
              testID="question-choice-3"
            >
              <View
                style={
                  Object {
                    "borderTopLeftRadius": 3,
                    "borderTopRightRadius": 3,
                    "height": 120,
                    "width": "100%",
                  }
                }
              >
                <Image
                  resizeMode="cover"
                  source={
                    Object {
                      "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": 120,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                  testID="question-choice-3-img"
                />
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-start",
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View>
                  <View
                    style={Object {}}
                  >
                    <Text
                      selectable={false}
                      style={
                        Array [
                          Object {},
                          Object {},
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#14171A",
                            "fontSize": 17,
                            "fontWeight": "700",
                          }
                        }
                      >
                        Apple Store
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "height": 8,
                "width": 8,
              }
            }
          />
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "overflow": "hidden",
                  },
                  false,
                  Object {
                    "flexGrow": 1,
                  },
                ]
              }
              testID="question-choice-4"
            >
              <View
                style={
                  Object {
                    "borderTopLeftRadius": 3,
                    "borderTopRightRadius": 3,
                    "height": 120,
                    "width": "100%",
                  }
                }
              >
                <Image
                  resizeMode="cover"
                  source={
                    Object {
                      "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": 120,
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                  testID="question-choice-4-img"
                />
              </View>
              <View
                style={
                  Object {
                    "justifyContent": "flex-start",
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View>
                  <View
                    style={Object {}}
                  >
                    <Text
                      selectable={false}
                      style={
                        Array [
                          Object {},
                          Object {},
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#14171A",
                            "fontSize": 17,
                            "fontWeight": "700",
                          }
                        }
                      >
                        Pineapple Store
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-validate-disabled"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 44,
              "justifyContent": "center",
              "marginBottom": 10,
            },
            Array [
              Object {
                "borderRadius": 32,
                "borderWidth": 0,
                "height": 54,
                "marginBottom": 0,
              },
              Object {
                "backgroundColor": "#00B0FF",
              },
              undefined,
            ],
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#90A4AE",
                },
              ],
            ]
          }
        >
          Validate
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Question With image 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingVertical": 24,
    }
  }
  testID="question"
>
  <View
    style={
      Object {
        "paddingHorizontal": 64,
      }
    }
  >
    <View
      testID="question-title"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              }
            }
          >
            What is the online Apple application store called?
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View
      testID="explanation"
    >
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#90A4AE",
                "fontSize": 15,
                "textAlign": "center",
              }
            }
          >
            Select the correct answers
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "height": 200,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 200,
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="question-image"
      />
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      testID="question-choices"
    >
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-1"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Play Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-2"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      App Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-3"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Apple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "overflow": "hidden",
                },
                false,
                Object {
                  "flexGrow": 1,
                },
              ]
            }
            testID="question-choice-4"
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <View>
                <View
                  style={Object {}}
                >
                  <Text
                    selectable={false}
                    style={
                      Array [
                        Object {},
                        Object {},
                      ]
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#14171A",
                          "fontSize": 17,
                          "fontWeight": "700",
                        }
                      }
                    >
                      Pineapple Store
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-validate-disabled"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 44,
              "justifyContent": "center",
              "marginBottom": 10,
            },
            Array [
              Object {
                "borderRadius": 32,
                "borderWidth": 0,
                "height": 54,
                "marginBottom": 0,
              },
              Object {
                "backgroundColor": "#00B0FF",
              },
              undefined,
            ],
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "color": "#90A4AE",
                },
              ],
            ]
          }
        >
          Validate
        </Text>
      </View>
    </View>
  </View>
</View>
`;
